# gsx

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  demo-loss-psnr.cpp
.agents/skills/code-review/: SKILL.md
.agents/skills/kernel-tuning/: SKILL.md
.agents/skills/kernel-tuning/evals/: evals.json
.agents/skills/metal-shading-language/: LICENSE  README.md  SKILL.md
.agents/skills/metal-shading-language/references/chapters/: 00-front-matter.md  01-introduction.md  02-data-types.md  03-operators.md  04-address-spaces.md  05-function-and-variable-declarations.md  06-metal-standard-library.md  07-metal-performance-primitives.md  08-numerical-compliance.md  09-appendix.md
.agents/skills/test-coverage/: SKILL.md
.agents/skills/test-coverage/scripts/: generate_coverage.sh
apps/: CMakeLists.txt  banana-optim.c  bench_dataset.cpp  gsx-info.c  image_fit_demo.c  multi-gaussian-render.c  ply_viewer.cpp  render_pcd.c  ssim-numerical-diff.c  train_preprocessed.cpp  two-gaussian-render.c
benchmarks/: CMakeLists.txt  api_loss_benchmark.cpp  api_smoke_benchmark.cpp  metal_kernel_bench.cpp  metal_sort_perf.mm
cmake/: gsx-llvm-gcov.sh.in  gsx-reset-coverage.cmake
gsx/: CMakeLists.txt
gsx/include/gsx/: gsx-adc.h  gsx-backend.h  gsx-base.h  gsx-core.h  gsx-data.h  gsx-loss.h  gsx-optim.h  gsx-random.h  gsx-render.h  gsx-runtime.h  gsx.h
gsx/include/gsx/extra/: gsx-flann.h  gsx-image.h  gsx-io-ply.h  gsx-stbi.h
gsx/src/: bqueue.hpp  gsx-adc.c  gsx-backend.c  gsx-core.c  gsx-data-impl.h  gsx-data.c  gsx-impl.h  gsx-loss.c  gsx-optim.c  gsx-random.c  gsx-render.c  gsx-runtime.c  gsx-tensor-helpers.h  helper_math.h  pcg32.h
gsx/src/extra/: gsx-flann.cpp  gsx-image-impl.h  gsx-image.c  gsx-io-ply.cpp  gsx-stbi.c
gsx/src/gsx-cpu/: adc.c  async_dl.cpp  core.c  gsx-cpu.c  internal.h  loss.c  optim.c  render.c  tensor-helpers.h
gsx/src/gsx-cpu/adc/: default.c  internal.h  mcmc.c
gsx/src/gsx-cuda/: adc.c  adc.cu  async_dl.cu  backend.c  buffer.c  common_utils.h  gsx-cuda-kernels.cu  gsx-cuda.c  internal.h  loss-pointwise-kernels.cu  loss-ssim-kernels.cu  loss.c  optim.c  reduce-kernels.cu  render-kernels.cu  render.c  sh_soa_utils.cuh  shared.c  tensor-helpers.h
gsx/src/gsx-cuda/fastgs/: backward.cu  backward.h  buffer_utils.h  forward.cu  forward.h  kernel_utils.cuh  kernels_backward.cuh  kernels_forward.cuh  nvtx_gs.h  rasterization_config.h  utils.h
gsx/src/gsx-cuda/fastgs/tinygs/: common.hpp
gsx/src/gsx-cuda/fastgs/tinygs/cuda/: common_host.hpp
gsx/src/gsx-metal/: adc.c  async_dl.mm  backend.m  buffer.m  internal.h  loss.c  objc-helpers.h  optim-kernels.m  optim.c  render.c  shared.m  tensor-helpers.h  tensor-kernels.m
gsx/src/gsx-metal/adc/: default.c  internal.h  mcmc.c
gsx/src/gsx-metal/kernels/: OPTIMIZATION_REPORT.md  adc.m  adc.metal  loss.m  loss.metal  optim.m  optim.metal  render.m  render.metal  render_backward.m  render_backward.metal  render_common.metal  scan.metal  simd_utils.metal  sort.metal  tensor.m  tensor.metal
gsx/src/gsx-metal/renderer/: backward.m  common.m  context.c  forward.c  forward.m  sort.c
scripts/: convert_mipnerf360_to_data_storage.py
tests/: CMakeLists.txt  adc_runtime.cpp  api_contract.c  api_contract.cpp  backend_preinit_runtime.c  backend_registry_topology.cpp  backend_runtime.cpp  core_runtime.cpp  cuda_adc_parity_runtime.cpp  cuda_adc_runtime.cpp  cuda_backend_runtime.cpp  cuda_loss_runtime.cpp  cuda_optim_runtime.cpp  cuda_render_runtime.cpp  data_runtime.cpp  image_runtime.cpp  io_ply_runtime.cpp  loss_runtime.cpp  metal_adc_runtime.cpp  metal_backend_runtime.cpp  metal_loss_runtime.cpp  metal_optim_runtime.cpp  optim_runtime.cpp  random_runtime.c  random_tensor_runtime.cpp  render_runtime.cpp  runtime_scheduler.cpp  runtime_session.cpp  standalone_header_compile.c  standalone_header_compile.cpp  stbi_runtime.cpp
