set(
    GSX_SOURCES
        src/gsx-loss.c
        src/gsx-adc.c
        src/gsx-optim.c
        src/gsx-core.c
        src/gsx-backend.c
        src/gsx-render.c
        src/gsx-data.c
        src/extra/gsx-stbi.c
        src/gsx-cpu/core.c
        src/gsx-cpu/loss.c
        src/gsx-cpu/optim.c
        src/gsx-cpu/adc.c
        src/gsx-cpu/render.c
        src/stb/stb_impl.c
)

if(GSX_USE_CUDA)
    list(
        APPEND
        GSX_SOURCES
            src/gsx-cuda/shared.c
            src/gsx-cuda/backend.c
            src/gsx-cuda/buffer.c
            src/gsx-cuda/loss.c
            src/gsx-cuda/optim.c
            src/gsx-cuda/render.c
            src/gsx-cuda/render-kernels.cu
            src/gsx-cuda/fastgs/forward.cu
            src/gsx-cuda/fastgs/backward.cu
            src/gsx-cuda/adc.c
            src/gsx-cuda/gsx-cuda-kernels.cu
            src/gsx-cuda/loss-pointwise-kernels.cu
            src/gsx-cuda/loss-ssim-kernels.cu
    )
endif()

if(GSX_USE_METAL)
    list(
        APPEND
        GSX_SOURCES
            src/gsx-metal/shared.m
            src/gsx-metal/kernels/optim.m
            src/gsx-metal/kernels/tensor.m
            src/gsx-metal/kernels/loss.m
            src/gsx-metal/kernels/render.m
            src/gsx-metal/backend.m
            src/gsx-metal/buffer.m
            src/gsx-metal/loss.c
            src/gsx-metal/optim.c
            src/gsx-metal/adc.c
            src/gsx-metal/render.c
            src/gsx-metal/renderer/context.c
                src/gsx-metal/renderer/forward.m
            src/gsx-metal/renderer/sort.c
    )

    enable_language(ASM)

    set(GSX_METAL_KERNELS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src/gsx-metal/kernels")
    set(GSX_METAL_AUTOGENERATED_DIR "${CMAKE_CURRENT_BINARY_DIR}/autogenerated")

    file(MAKE_DIRECTORY "${GSX_METAL_AUTOGENERATED_DIR}")

    function(gsx_append_metal_embedded_kernel out_var kernel_name section_name comment_suffix)
        set(kernel_source "${GSX_METAL_KERNELS_DIR}/${kernel_name}.metal")
        set(kernel_air "${GSX_METAL_AUTOGENERATED_DIR}/gsx-metal-${kernel_name}.air")
        set(kernel_metallib "${GSX_METAL_AUTOGENERATED_DIR}/gsx-metal-${kernel_name}.metallib")
        set(kernel_embed_asm "${GSX_METAL_AUTOGENERATED_DIR}/gsx-metal-${kernel_name}-embed.s")
        set(kernel_symbol_prefix "gsx_metal_${kernel_name}_metallib")

        add_custom_command(
            OUTPUT "${kernel_embed_asm}"
            BYPRODUCTS "${kernel_air}" "${kernel_metallib}"
            COMMAND xcrun -sdk macosx metal -O3 -c "${kernel_source}" -o "${kernel_air}"
            COMMAND xcrun -sdk macosx metallib "${kernel_air}" -o "${kernel_metallib}"
            COMMAND echo ".section __DATA,${section_name}" > "${kernel_embed_asm}"
            COMMAND echo ".globl _${kernel_symbol_prefix}_start" >> "${kernel_embed_asm}"
            COMMAND echo "_${kernel_symbol_prefix}_start:" >> "${kernel_embed_asm}"
            COMMAND echo .incbin "\"${kernel_metallib}\"" >> "${kernel_embed_asm}"
            COMMAND echo ".globl _${kernel_symbol_prefix}_end" >> "${kernel_embed_asm}"
            COMMAND echo "_${kernel_symbol_prefix}_end:" >> "${kernel_embed_asm}"
            DEPENDS "${kernel_source}"
            COMMENT "Compiling and embedding Metal ${comment_suffix} kernels"
            VERBATIM
        )

        set(${out_var} ${${out_var}} "${kernel_embed_asm}" PARENT_SCOPE)
    endfunction()

    set(GSX_METAL_EMBED_SOURCES)
    gsx_append_metal_embedded_kernel(GSX_METAL_EMBED_SOURCES tensor __gsx_tmetallib tensor)
    gsx_append_metal_embedded_kernel(GSX_METAL_EMBED_SOURCES optim __gsx_ometallib optimizer)
    gsx_append_metal_embedded_kernel(GSX_METAL_EMBED_SOURCES loss __gsx_lmetallib loss)
    gsx_append_metal_embedded_kernel(GSX_METAL_EMBED_SOURCES render __gsx_rmetallib render)
    list(APPEND GSX_SOURCES ${GSX_METAL_EMBED_SOURCES})
endif()

add_library(
    gsx
    STATIC
        ${GSX_SOURCES}
)
add_library(gsx::gsx ALIAS gsx)

add_library(gsx_headers INTERFACE)
add_library(gsx::headers ALIAS gsx_headers)

target_include_directories(
    gsx_headers
    INTERFACE
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
)

target_compile_features(gsx_headers INTERFACE c_std_11 cxx_std_17)
target_link_libraries(gsx PUBLIC gsx::headers)

target_compile_definitions(
    gsx
    PRIVATE
        GSX_HAS_CUDA=$<BOOL:${GSX_USE_CUDA}>
        GSX_HAS_METAL=$<BOOL:${GSX_USE_METAL}>
)

target_include_directories(
    gsx
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
)

gsx_configure_target(gsx C)

if(NOT MSVC)
    target_link_libraries(gsx PUBLIC m)
endif()

target_include_directories(
    gsx
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/src
        ${CMAKE_CURRENT_SOURCE_DIR}/src/stb
)

if(GSX_USE_CUDA)
    find_package(CUDAToolkit REQUIRED)
    target_link_libraries(gsx PRIVATE CUDA::cudart)
    target_compile_options(
        gsx
        PRIVATE
            $<$<COMPILE_LANGUAGE:CUDA>:-Wno-pedantic>
            $<$<COMPILE_LANGUAGE:CUDA>:-Xcompiler=-Wno-pedantic>
    )
    set_target_properties(gsx PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
    set_target_properties(gsx PROPERTIES CUDA_STANDARD 17 CUDA_STANDARD_REQUIRED YES)
endif()

if(GSX_USE_METAL)
    find_library(FOUNDATION_FRAMEWORK Foundation REQUIRED)
    find_library(METAL_FRAMEWORK Metal REQUIRED)
    target_link_libraries(gsx PUBLIC ${FOUNDATION_FRAMEWORK} ${METAL_FRAMEWORK})
endif()
